--- a/q1/q1/index.html
+++ b/q1/q1/index.html
@@ -33,7 +33,7 @@
         <h3 class="question--title">Q1-2 上下左右中央寄せ</h3>
         <!-- Q1-2の回答はここから -->
         <!-- tableを使って上下左右中央寄せ -->
-        <div class="q1--perimeter">
+        <div class="q1--perimeter tablebox">
             <div class="tableout">
                 <div class="table">table</div>
             </div>
